--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,5 @@
   <body>
     <div id="root"></div>
   </body>
-  <script src="./FileSaver.js"></script>
+  <!-- <script src="./FileSaver.js"></script> -->
 </html>
